--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     font-family: 'Open Sans', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 /* Nav related style */
 span{
@@ -36,4 +38,33 @@ nav div li{
 nav a{
     text-decoration: none;
     color:#181818 ;
+}
+.header{
+    background-color: #FFF8F3;
+}
+/* banner side style  */
+.banner{
+    display: flex;
+    padding: 0px 30px 0px 100px;
+    align-items: center;
+    justify-content: space-around;
+    background: #FFF8F3;
+    background-image: url(images/header_bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.profile-pic{
+    width: 451px;
+    bottom: o;
+}
+.intro{
+    font-size: 35px;
+    color: #474747;
+    margin-bottom: 0;
+}
+.full-name{
+    font-size: 60px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
 }
