--- a/style.css
+++ b/style.css
@@ -68,3 +68,42 @@ nav a{
     margin-top: 5px;
     margin-bottom: 20px;
 }
+/* about me section style  */
+.about-side{
+    padding: 100px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 100px o;
+}
+main .about-side{
+    max-width: 700px;
+    margin: 0 auto;
+}
+.about-me{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+.about-section{
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
+section{
+    margin-bottom: 100px;
+}
+.about-info-area{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{   
+    text-align: center;
+}
+.info-title{
+    color: #757575;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 30px;
+}
