--- a/style.css
+++ b/style.css
@@ -107,3 +107,15 @@ section{
     font-weight: 400;
     line-height: 30px;
 }
+/* what i do section style  */
+.what-i-do-title{
+    text-align: center;
+}
+.what-i-do-description{
+    padding: 20px 200px;
+}
+.skills-area-box{
+    display: flex;
+    
+    justify-content: space-around;
+}
