--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@ section{
     border-radius: 10px;
     background: #FFF8F3;
     box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    text-align: justify;
 }   
 .skills-title{
     color: brown;
@@ -138,8 +139,43 @@ section{
     color: dimgray;
 }
 /* resume section style */
+
 .resume-title{
     text-align: center;
     font-weight: 700;
     font-size: 30px;
+}
+.resume-half-area-title{
+    text-align: center;
+    color: brown;
+    font-size: 30px;
+    font-weight: 700;
+}
+.resume-area{
+    display: flex;
+    padding: 0px 130px;
+    gap: 60px;
+}
+.resume-area hr{
+    margin: 30px 0;
+}
+.resume-item-title{
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 10px;
+
+}
+.resume-item-university{
+    font-size: 15px;
+    font-weight: 400;
+    color: #757575;
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume-item-description{
+    color: #474747;
+}
+.btn-center{
+    text-align: center;
+    margin-top: 50px;
 }
