--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@ nav a{
     align-items: center;
     justify-content: space-around;
     background: #FFF8F3;
-    background-image: url(images/header_bg.png);
+    background-image: url(images/header_bg.png) ; 
     background-repeat: no-repeat;
-    background-position: right;
+    background-position: right ;
 }
 .profile-pic{
     width: 451px;
@@ -156,6 +156,7 @@ section{
 }
 .resume-item-area{
     background: #FFF8F3;
+    border-radius: 10px;
 }
 .resume-area{
     display: flex;
@@ -210,4 +211,7 @@ footer{
 .footer-half-area-description{
     color: dimgray;
     font-weight: 400;
+}
+.socail-links a{
+    margin-right: 30px;
 }
